tests/baselines/reference/objectTypeHidingMembersOfExtendedObject(strict=true).errors.txt
objectTypeHidingMembersOfExtendedObject.ts(2,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
objectTypeHidingMembersOfExtendedObject.ts(6,5): error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
objectTypeHidingMembersOfExtendedObject.ts(10,5): error TS2411: Property 'data' of type 'A' is not assignable to 'string' index type 'Object'.
objectTypeHidingMembersOfExtendedObject.ts(16,5): error TS2564: Property 'data' has no initializer and is not definitely assigned in the constructor.
objectTypeHidingMembersOfExtendedObject.ts(21,16): error TS2454: Variable 'c' is used before being assigned.
objectTypeHidingMembersOfExtendedObject.ts(22,14): error TS2454: Variable 'c' is used before being assigned.
objectTypeHidingMembersOfExtendedObject.ts(23,11): error TS7053: Element implicitly has an 'any' type because expression of type '"hm"' can't be used to index type 'B'.
  Property 'hm' does not exist on type 'B'.
objectTypeHidingMembersOfExtendedObject.ts(24,11): error TS2454: Variable 'c' is used before being assigned.
objectTypeHidingMembersOfExtendedObject.ts(33,16): error TS2454: Variable 'i' is used before being assigned.
objectTypeHidingMembersOfExtendedObject.ts(34,14): error TS2454: Variable 'i' is used before being assigned.
objectTypeHidingMembersOfExtendedObject.ts(35,11): error TS7053: Element implicitly has an 'any' type because expression of type '"hm"' can't be used to index type 'B'.
  Property 'hm' does not exist on type 'B'.
objectTypeHidingMembersOfExtendedObject.ts(36,11): error TS2454: Variable 'i' is used before being assigned.
objectTypeHidingMembersOfExtendedObject.ts(45,11): error TS7053: Element implicitly has an 'any' type because expression of type '"hm"' can't be used to index type 'B'.
  Property 'hm' does not exist on type 'B'.
objectTypeHidingMembersOfExtendedObject.ts(46,11): error TS2454: Variable 'i' is used before being assigned.
objectTypeHidingMembersOfExtendedObject.ts(54,16): error TS2454: Variable 'b' is used before being assigned.
lib.es5.d.ts(--,--): error TS2411: Property 'constructor' of type 'Function' is not assignable to 'string' index type 'Object'.
lib.es5.d.ts(--,--): error TS2411: Property 'toString' of type '() => string' is not assignable to 'string' index type 'Object'.
lib.es5.d.ts(--,--): error TS2411: Property 'toLocaleString' of type '() => string' is not assignable to 'string' index type 'Object'.
lib.es5.d.ts(--,--): error TS2411: Property 'valueOf' of type '() => Object' is not assignable to 'string' index type 'Object'.
lib.es5.d.ts(--,--): error TS2411: Property 'hasOwnProperty' of type '(v: PropertyKey) => boolean' is not assignable to 'string' index type 'Object'.
lib.es5.d.ts(--,--): error TS2411: Property 'isPrototypeOf' of type '(v: Object) => boolean' is not assignable to 'string' index type 'Object'.
lib.es5.d.ts(--,--): error TS2411: Property 'propertyIsEnumerable' of type '(v: PropertyKey) => boolean' is not assignable to 'string' index type 'Object'.


==== objectTypeHidingMembersOfExtendedObject.ts (15 errors) ====
    class A {
        foo: string;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class B extends A {
        bar: string;
        ~~~
!!! error TS2564: Property 'bar' has no initializer and is not definitely assigned in the constructor.
    }
    
    interface Object {
        data: A;
        ~~~~
!!! error TS2411: Property 'data' of type 'A' is not assignable to 'string' index type 'Object'.
        [x: string]: Object;
    }
    
    class C {
        valueOf() { }
        data: B;
        ~~~~
!!! error TS2564: Property 'data' has no initializer and is not definitely assigned in the constructor.
        [x: string]: any;
    }
    
    var c: C;
    var r1: void = c.valueOf();
                   ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r1b: B = c.data;
                 ~
!!! error TS2454: Variable 'c' is used before being assigned.
    var r1c = r1b['hm']; // should be 'Object'
              ~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"hm"' can't be used to index type 'B'.
!!! error TS7053:   Property 'hm' does not exist on type 'B'.
    var r1d = c['hm']; // should be 'any'
              ~
!!! error TS2454: Variable 'c' is used before being assigned.
    
    interface I {
        valueOf(): void;
        data: B;
        [x: string]: any;
    }
    
    var i: I;
    var r2: void = i.valueOf();
                   ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r2b: B = i.data;
                 ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r2c = r2b['hm']; // should be 'Object'
              ~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"hm"' can't be used to index type 'B'.
!!! error TS7053:   Property 'hm' does not exist on type 'B'.
    var r2d = i['hm']; // should be 'any'
              ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var a = {
        valueOf: () => { },
        data: new B()
    }
    
    var r3: void = a.valueOf();
    var r3b: B = a.data;
    var r3c = r3b['hm']; // should be 'Object'
              ~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"hm"' can't be used to index type 'B'.
!!! error TS7053:   Property 'hm' does not exist on type 'B'.
    var r3d = i['hm'];
              ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var b: {
        valueOf(): void;
        data: B;
        [x: string]: any;
    }
    
    var r4: void = b.valueOf();
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.